[gd_scene load_steps=16 format=3 uid="uid://o7s4bjxiyenh"]

[ext_resource type="Texture2D" uid="uid://bddm7rsjtikb4" path="res://Images/grey.png" id="1_q5vv6"]
[ext_resource type="Texture2D" uid="uid://curv6qkdp78d3" path="res://Images/cultist.svg" id="1_qo8nk"]
[ext_resource type="Script" path="res://Interface/CharacterInterface/character_info_small.gd" id="1_yo1fq"]
[ext_resource type="Texture2D" uid="uid://ddu8hwd3a15k7" path="res://Images/stiletto(1).svg" id="2_s7y8s"]
[ext_resource type="Texture2D" uid="uid://bitw5ttwb7f7k" path="res://Images/shield.svg" id="3_ewn8m"]
[ext_resource type="Texture2D" uid="uid://diee2feq6hrn0" path="res://Images/hearts.svg" id="4_mxb3r"]
[ext_resource type="Texture2D" uid="uid://beu3rdvni3a5a" path="res://Images/gift-of-knowledge.svg" id="5_c75b1"]
[ext_resource type="Texture2D" uid="uid://d3jb7t70e14o6" path="res://Images/brainstorm.svg" id="8_7xmtj"]

[sub_resource type="LabelSettings" id="LabelSettings_ww834"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_60lt4"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_2ixdg"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_y1twj"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_dbp2y"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_fblbg"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_84hb3"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[node name="CharacterInfoSmall" type="TextureRect"]
custom_minimum_size = Vector2(120, 120)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1032.0
offset_bottom = -523.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_q5vv6")
expand_mode = 1
script = ExtResource("1_yo1fq")

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_right = 119.0
offset_bottom = 14.0
text = "Name"
label_settings = SubResource("LabelSettings_ww834")
horizontal_alignment = 1

[node name="CharacterImage" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 15.0
offset_right = 56.0
offset_bottom = 70.0
texture = ExtResource("1_qo8nk")
expand_mode = 1

[node name="CharacteristicsLayout" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 15.0
offset_right = 118.0
offset_bottom = 101.0
columns = 2

[node name="AttackImage" type="TextureRect" parent="CharacteristicsLayout"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("2_s7y8s")
expand_mode = 1

[node name="AttackValue" type="Label" parent="CharacteristicsLayout"]
layout_mode = 2
text = "30"
label_settings = SubResource("LabelSettings_60lt4")

[node name="DefenseImage" type="TextureRect" parent="CharacteristicsLayout"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("3_ewn8m")
expand_mode = 1

[node name="DefenseValue" type="Label" parent="CharacteristicsLayout"]
layout_mode = 2
text = "30"
label_settings = SubResource("LabelSettings_2ixdg")

[node name="HealthImage" type="TextureRect" parent="CharacteristicsLayout"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("4_mxb3r")
expand_mode = 1

[node name="HealthValue" type="Label" parent="CharacteristicsLayout"]
layout_mode = 2
text = "30"
label_settings = SubResource("LabelSettings_y1twj")

[node name="CastSpeedImage" type="TextureRect" parent="CharacteristicsLayout"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("5_c75b1")
expand_mode = 1

[node name="CastSpeedValue" type="Label" parent="CharacteristicsLayout"]
layout_mode = 2
text = "30"
label_settings = SubResource("LabelSettings_dbp2y")

[node name="ConcentrationImage" type="TextureRect" parent="CharacteristicsLayout"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("8_7xmtj")
expand_mode = 1

[node name="ConcentrationValue" type="Label" parent="CharacteristicsLayout"]
layout_mode = 2
text = "30"
label_settings = SubResource("LabelSettings_dbp2y")

[node name="LevelContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 60.0
offset_right = 41.0
offset_bottom = 100.0

[node name="LevelLabel" type="Label" parent="LevelContainer"]
layout_mode = 2
text = "lvl:"
label_settings = SubResource("LabelSettings_fblbg")

[node name="LevelValueLabel" type="Label" parent="LevelContainer"]
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_fblbg")

[node name="LevelProgressBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 0
offset_left = 26.0
offset_top = 90.0
offset_right = 91.0
offset_bottom = 117.0
value = 20.0
show_percentage = false

[node name="ProgressBarValueLabel" type="Label" parent="LevelProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100/1000"
label_settings = SubResource("LabelSettings_84hb3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 71.0
grow_vertical = 0
alignment = 1

[node name="AddButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Add"

[node name="RemoveButton" type="Button" parent="ButtonContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 8
text = "Remove"

[connection signal="pressed" from="ButtonContainer/AddButton" to="." method="_on_add_pressed"]
